Product stock update and index,create ,edit blade file in design

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -38,6 +38,15 @@ h6 {
   font-family: "Nunito", sans-serif;
 }
 
+
+/*--------------------------------------------------------------
+# conatiner
+--------------------------------------------------------------*/
+
+.contianer .row{
+  background-color: rgb(155, 191, 212);
+}
+
 /*--------------------------------------------------------------
 # Main
 --------------------------------------------------------------*/
