--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -232,7 +232,7 @@ h6 {
 .card {
   margin-bottom: 30px;
   border: none;
-  border-radius: 5px;
+  border-radius: 50px 20px;
   box-shadow: 0px 0 30px rgba(1, 41, 112, 0.1);
 }
 
@@ -242,6 +242,7 @@ h6 {
   background-color: #fff;
   color: #798eb3;
   padding: 15px;
+  font-weight: bold;
 }
 
 .card-title {
