--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -109,7 +109,7 @@ h6 {
   opacity: 1;
 }
 .card-body{
-  background-color: lightblue;
+  background-color: rgb(155, 191, 212);
 }
 
 /*--------------------------------------------------------------
@@ -230,7 +230,7 @@ h6 {
 
 /* Card */
 .card {
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   border: none;
   border-radius: 50px 20px;
   box-shadow: 0px 0 30px rgba(1, 41, 112, 0.1);
@@ -260,7 +260,7 @@ h6 {
 }
 
 .card-body {
-  padding: 0 20px 20px 20px;
+  padding: 0 20px 4px 20px;
 }
 
 .card-img-overlay {
