--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -232,7 +232,7 @@ h6 {
 .card {
   margin-bottom: 10px;
   border: none;
-  border-radius: 50px 20px;
+  /* border-radius: 0px 20px  ; */
   box-shadow: 0px 0 30px rgba(1, 41, 112, 0.1);
 }
 
