--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -109,7 +109,7 @@ h6 {
   opacity: 1;
 }
 .card-body{
-  background-color: rgb(155, 191, 212);
+  background-color: #D6EFD8;
 }
 
 /*--------------------------------------------------------------
@@ -394,7 +394,7 @@ h6 {
   z-index: 997;
   height: 60px;
   box-shadow: 0px 2px 20px rgba(1, 41, 112, 0.1);
-  background-color: #fff;
+  background-color: #9CDBA6;
   padding-left: 20px;
   /* Toggle Sidebar Button */
   /* Search Bar */
@@ -623,7 +623,7 @@ h6 {
   scrollbar-width: thin;
   scrollbar-color: #aab7cf transparent;
   box-shadow: 0px 0px 20px rgba(1, 41, 112, 0.1);
-  background-color: #fff;
+  background-color: #9CDBA6;
 }
 
 @media (max-width: 1199px) {
@@ -697,9 +697,9 @@ h6 {
   align-items: center;
   font-size: 15px;
   font-weight: 600;
-  color: #4154f1;
+  color: #899bbd;
   transition: 0.3;
-  background: #f6f9ff;
+  background: #9CDBA6;
   padding: 10px 15px;
   border-radius: 4px;
 }
@@ -707,25 +707,25 @@ h6 {
 .sidebar-nav .nav-link i {
   font-size: 16px;
   margin-right: 10px;
-  color: #4154f1;
-}
-
-.sidebar-nav .nav-link.collapsed {
-  color: #012970;
-  background: #fff;
-}
-
-.sidebar-nav .nav-link.collapsed i {
   color: #899bbd;
 }
 
+.sidebar-nav .nav-link.collapsed {
+  color: #fafafa;
+  background: #9CDBA6;
+}
+
+.sidebar-nav .nav-link.collapsed i {
+  color: #fafafa;
+}
+
 .sidebar-nav .nav-link:hover {
-  color: #4154f1;
-  background: #f6f9ff;
+  color: #fafafa;
+  background: #9CDBA6;
 }
 
 .sidebar-nav .nav-link:hover i {
-  color: #4154f1;
+  color: #fafafa;
 }
 
 .sidebar-nav .nav-link .bi-chevron-down {
@@ -748,7 +748,7 @@ h6 {
   align-items: center;
   font-size: 14px;
   font-weight: 600;
-  color: #012970;
+  color: #899bbd;
   transition: 0.3;
   padding: 10px 0 10px 40px;
   transition: 0.3s;
@@ -763,11 +763,11 @@ h6 {
 
 .sidebar-nav .nav-content a:hover,
 .sidebar-nav .nav-content a.active {
-  color: #4154f1;
+  color: #899bbd;
 }
 
 .sidebar-nav .nav-content a.active i {
-  background-color: #4154f1;
+  background-color: #899bbd;
 }
 
 /*--------------------------------------------------------------
